# ASFConnector

./: .env.example  .gitignore  .pre-commit-config.yaml  .typos.toml  API.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  test_asfconnector.py  test_nlog.py  test_twofa.py  test_type_structure.py
.github/agents/: my-agent.md
.github/workflows/: ci.yml  release.yml
ASFConnector/: IPCProtocol.py  __init__.py  config.py  error.py
ASFConnector/Controllers/: ASFController.py  BaseController.py  BotController.py  CommandController.py  NLogController.py  StructureController.py  TwoFactorAuthenticationController.py  TypeController.py  enum.py
docs/: README_zh.md
tests/: .env.test  README.md  conftest.py  test_asfconnector.py  test_config.py  test_controllers.py  test_errors.py
