[project]
name = "asfconnector"
version = "0.0.1"
description = "Another Python wrapper of ArchiSteamFarm IPC API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
]
