[project]
name = "asfconnector"
version = "0.0.1"
description = "Another Python wrapper of ArchiSteamFarm IPC API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "poethepoet>=0.29.0",
]

[tool.poe.tasks]
test = "pytest -v --cov=ASFConnector --cov-report=xml --cov-report=term-missing"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
